--- a/desarrollo-web/pages/nosotros.html
+++ b/desarrollo-web/pages/nosotros.html
@@ -9,8 +9,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
         rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="../style/style.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <title>Nosotros</title>
 </head>
 
@@ -85,7 +86,7 @@
                         src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
         </ul>
     </footer>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
