--- a/index.html
+++ b/index.html
@@ -14,32 +14,45 @@
     <title>Esquina Cantina</title>
 </head>
 
-<body id="body-index">
+<body>
     <header>
-        <nav class="nav-left">
-            <ul class="menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a></li>
-                <li><a href="./pages/reservas.html">Reservas</a></li>
-            </ul>
-        </nav>
-
-        <a href="index.html">
-            <img src="./img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
-        </a>
-
-        <nav class="nav-right">
-            <ul class="menu">
-                <li><a href="./pages/menu.html">Menú</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-                <li><a href="./pages/pedi.html">Pedí acá</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                <img src="./img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/menu.html">Menú</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/reservas.html">Reservas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/pedi.html">Pedidos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                  </li>                  
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <main id="main-index">
         <p id="bienvenidos-inicio">¡Bienvenidos!</p>
-        <p id="se-pica-inicio">La cantina se pica...</p>
+        <p id="se-pica-inicio">Se pica la cantina...</p>
     </main>
 
     <footer>
