--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -2,91 +2,206 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
-        rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../style/style.css">
-    <title>Nosotros</title>
+  <link rel="stylesheet" href="../style/style.css">
+  <title>Nosotros</title>
 </head>
 
 <body>
-    <header>
-        <nav class="nav-left">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./reservas.html">Reservas</a></li>
-            </ul>
-        </nav>
-
-        <a href="../index.html">
-            <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
         </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./menu.html">Menú</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./reservas.html">Reservas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pedi.html">Pedidos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main id="main-nosotros">
+    <section>
+      <p class="p-nosotros">Esquina Cantina es un bar en el Prado que ofrece un lindo ambiente y un menu variado,
+        con productos de
+        excelente calidad. Su ambiente relajado y fresco lo convierte en un lugar ideal para disfrutar de su
+        comida y
+        bebida con amigos y familia. </p>
 
-        <nav class="nav-right">
-            <ul>
-                <li><a href="./menu.html">Menú</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./pedi.html">Pedí acá</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main id="main-nosotros">
-        <section>
-            <p class="p-nosotros">Esquina Cantina es un bar en el Prado que ofrece un lindo ambiente y un menu variado,
-                con productos de
-                excelente calidad. Su ambiente relajado y fresco lo convierte en un lugar ideal para disfrutar de su
-                comida y
-                bebida con amigos y familia. </p>
+      <p class="p-nosotros">Con un estilo
+        moderno y un menú variado, invita a quienes buscan un espacio cómodo en uno de los barrios mas
+        tradicionales
+        de Montevide para
+        desconectar y saborear buenos momentos.</p>
 
-            <p class="p-nosotros">Con un estilo
-                moderno y un menú variado, invita a quienes buscan un espacio cómodo en uno de los barrios mas
-                tradicionales
-                de Montevide para
-                desconectar y saborear buenos momentos.</p>
+      <p class="p-nosotros">La cantina se pica de martes a sabados a partir de las 19:30h a 2:00h. En la mejor
+        esquina del Prado, Juan
+        Carlos Blanco & Irigoitia.</p>
+    </section>
 
-            <p class="p-nosotros">La cantina se pica de martes a sabados a partir de las 19:30h a 2:00h. En la mejor
-                esquina del Prado, Juan
-                Carlos Blanco & Irigoitia.</p>
-        </section>
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="6" aria-label="Slide 7"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="7" aria-label="Slide 8"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="8" aria-label="Slide 9"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="9" aria-label="Slide 10"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="10"
+          aria-label="Slide 11"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="11"
+          aria-label="Slide 12"></button>
+      </div>
 
-        <section id="carrusel">
-            <img src="../img/chivito.jpg" alt="Chivito de Esquina Cantina">
-            <img src="../img/entraña.jpg" alt="Entraña de Esquina Cantina">
-            <img src="../img/gente-mesa.jpg" alt="Personas cominedo y tomando en Esquina Cantina">
-            <img src="../img/gramajo.jpg" alt="Gramajo de Esquina Cantina">
-            <img src="../img/hombre-vaso.jpg" alt="Persona tomando en Esquina Cantina">
-            <img src="../img/lemenyun.jpg" alt="Lemhenyun de Esquina Cantina">
-            <img src="../img/mujer-tomando.jpg" alt="Persona tomando en Esquina Cantina">
-            <img src="../img/gente-adentro.jpg" alt="Personas comiendo en la parte de adentro de Esquina Cantina">
-            <img src="../img/pizza.jpg" alt="Pizza muzzarella y fugazzeta de Esquina Cantina">
-            <img src="../img/tira-asado-boniato.jpg" alt="Tira de asado acompañada de boniato de Esquina Cantina">
-            <img src="../img/vasos4.jpg" alt="Vasos de aperol, fernet, gintonic y vermouth de Esquina Cantina">
-            <img src="../img/tira-asado.jpg" alt="Tiras de asado de Esquina Cantina">
-        </section>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="../img/gente-mesa.jpg" class="d-block w-100" alt="Gente en la mesa">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Momentos que se disfrutan</h5>
+            <p>Compartiendo en la cantina como en casa.</p>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="../img/entraña.jpg" class="d-block w-100" alt="Entraña">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Sabor que enamora</h5>
+            <p>La entraña más jugosa del Uruguay.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/chivito.jpg" class="d-block w-100" alt="Chivito">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Chivito uruguayo</h5>
+            <p>Un clásico que nunca falla.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/gramajo.jpg" class="d-block w-100" alt="Revuelto gramajo">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Revuelto de verdad</h5>
+            <p>Ideal para picar entre amigos.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/hombre-vaso.jpg" class="d-block w-100" alt="Hombre tomando">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>¡Salud!</h5>
+            <p>Siempre hay motivos para brindar.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/lemenyun.jpg" class="d-block w-100" alt="Lemenyun">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Tradición en cada bocado</h5>
+            <p>Lemeyún que conquista paladares.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/mujer-tomando.jpg" class="d-block w-100" alt="Mujer tomando">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Buen ambiente</h5>
+            <p>Disfrutar se nota en la cara.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/gente-adentro.jpg" class="d-block w-100" alt="Gente en el interior del local">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Un lugar con alma</h5>
+            <p>Comé, reí y volvé.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/pizza.jpg" class="d-block w-100" alt="Pizza">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Pasión por la pizza</h5>
+            <p>Con masa casera y mucho sabor.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/tira-asado-boniato.jpg" class="d-block w-100" alt="Tira de asado y boniato">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Asado bien nuestro</h5>
+            <p>Con boniato frito, como debe ser.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/vasos4.jpg" class="d-block w-100" alt="Vasos brindando">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Entre brindis y risas</h5>
+            <p>El mejor plan es con amigos.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/tira-asado.jpg" class="d-block w-100" alt="Tira de asado">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>El cierre perfecto</h5>
+            <p>Un buen asado, un buen recuerdo.</p>
+          </div>
+        </div>
+      </div>
 
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.6001729535697!2d-56.20169612394968!3d-34.866272472861354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a02b005353f233%3A0x8cb2e9a9a6a403c4!2sEsquina%20Cantina!5e0!3m2!1ses!2suy!4v1740367004428!5m2!1ses!2suy"
-            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-            id="mapa-google"></iframe>
-    </main>
-    <footer>
-        <ul>
-            <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="../img/logo-wp.png"
-                        alt="Logo WhatsApp" class="logo-rs"></a></li>
-            <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="../img/logo-ig.png"
-                        alt="Logo Instagram" class="logo-rs"></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
-                        src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
-        </ul>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </button>
+    </div>
+
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.6001729535697!2d-56.20169612394968!3d-34.866272472861354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a02b005353f233%3A0x8cb2e9a9a6a403c4!2sEsquina%20Cantina!5e0!3m2!1ses!2suy!4v1740367004428!5m2!1ses!2suy"
+      style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+      id="mapa-google"></iframe>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="../img/logo-wp.png"
+            alt="Logo WhatsApp" class="logo-rs"></a></li>
+      <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="../img/logo-ig.png"
+            alt="Logo Instagram" class="logo-rs"></a></li>
+      <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
+            src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
+    </ul>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
