--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -15,27 +15,40 @@
 </head>
 
 <body>
-    <header>
-        <nav class="nav-left">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./nosotros.html">Nosotros</a></li>
-                <li><a href="./reservas.html">Reservas</a></li>
-            </ul>
-        </nav>
-
-        <a href="../index.html">
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
             <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
-        </a>
-
-        <nav class="nav-right">
-            <ul>
-                <li><a href="./menu.html">Menú</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./pedi.html">Pedí acá</a></li>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./menu.html">Menú</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./reservas.html">Reservas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pedi.html">Pedidos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>                  
             </ul>
-        </nav>
-    </header>
+          </div>
+        </div>
+      </nav>
+</header>
     <main>
 
     </main>
