--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,68 +2,88 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
-        rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="../style/style.css">
-    <title>Contacto</title>
+  <link rel="stylesheet" href="../style/style.css">
+  <title>Nosotros</title>
 </head>
 
-<body class="p-3 m-0 border-0 bd-example m-0 border-0">
+<body>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./menu.html">Menú</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./reservas.html">Reservas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pedi.html">Pedidos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>                  
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./menu.html">Menú</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./reservas.html">Reservas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pedi.html">Pedidos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-</header>
-    <main id="main-contact">
-      
-    </main>
-    <footer>
-        <ul>
-            <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="../img/logo-wp.png"
-                        alt="Logo WhatsApp" class="logo-rs"></a></li>
-            <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="../img/logo-ig.png"
-                        alt="Logo Instagram" class="logo-rs"></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
-                        src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
-        </ul>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+      </div>
+    </nav>
+  </header>
+  <main id="main-contact">
+
+    <p>Hola, esperamos tu mensaje...</p>
+    <form action="#" method="">
+      <label for="nombre"></label>
+      <input type="text" id="nombre" name="nombre" placeholder="Nombre*" required>
+
+      <label for="apellido"></label>
+      <input type="text" id="apellido" name="apellido" placeholder="Apellido*" required>
+
+      <label for="celular"></label>
+      <input type="tel" id="celular" name="celular" placeholder="Celular*" required>
+
+      <label for="mensaje"></label>
+      <textarea id="mensaje" name="mensaje" placeholder="Escribí tu mensaje..." rows="4"></textarea>
+
+      <input type="submit" value="Enviar">
+    </form>
+  </main>
+
+
+  <footer>
+    <ul>
+      <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="../img/logo-wp.png"
+            alt="Logo WhatsApp" class="logo-rs"></a></li>
+      <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="../img/logo-ig.png"
+            alt="Logo Instagram" class="logo-rs"></a></li>
+      <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
+            src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
+    </ul>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
