Agregue boton enviar en reservas

--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -75,6 +75,7 @@
       <label>Nota (opcional)</label>
       <textarea id="nota" name="nota" placeholder="Escribí tu mensaje..."></textarea>
     </div>
+    <input type="submit" value="Enviar">
   </main>
   <footer>
     <ul>
