Reallice las correspondientes mejoras de CEO para la entrega final

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Menú de Esquina Cantina | Chivitos, Pizzas y Parrilla</title>
+    <meta name="description" content="Descubre nuestro menú en Esquina Cantina: chivitos, milanesas, pizza, parrilla y bebidas. La mejor comida tradicional uruguaya en Montevideo.">
+    <meta name="keywords" content="menú esquina cantina, chivitos, milanesas, pizza artesanal, parrilla, restaurante montevideo">
+    <link rel="canonical" href="https://www.esquinacantina.com/pages/menu.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
-        rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Menu</title>
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" aria-label="Navegación principal">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
-            <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
+          <a class="navbar-brand" href="../index.html">
+            <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav" width="150" height="50">
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Abrir menú de navegación">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -50,39 +50,39 @@
         </div>
       </nav>
 </header>
+
 <main>
-  <div class="carta">
-    <div class="carta-item">
-      <img src="../img/chivito-carta.jpg" alt="Carta seccion milanesas, chivito y acompañamineto">
-      <span class="titulo-carta">Chivitos & Milangas</span>
+  <section class="menu-section">
+    <h1>Menú de Esquina Cantina</h1>
+    <div class="carta">
+      <article class="carta-item">
+        <img src="../img/chivito-carta.jpg" alt="Chivitos y milanesas uruguayas tradicionales con guarnición" width="300" height="200">
+        <h2 class="titulo-carta">Chivitos & Milangas</h2>
+      </article>
+      <article class="carta-item">
+        <img src="../img/pizza-carta.jpg" alt="Pizzas artesanales y cortes de parrilla premium" width="300" height="200">
+        <h2 class="titulo-carta">Pizza & Parrilla</h2>
+      </article>
+      <article class="carta-item">
+        <img src="../img/refresco-carta.jpg" alt="Selección de refrescos y bebidas sin alcohol" width="300" height="200">
+        <h2 class="titulo-carta">Refrescos</h2>
+      </article>
+      <article class="carta-item">
+        <img src="../img/cerveza-carta.jpg" alt="Cervezas artesanales uruguayas y selección de vinos nacionales" width="300" height="200">
+        <h2 class="titulo-carta">Cervezas & Vinos</h2>
+      </article>
     </div>
-    <div class="carta-item">
-      <img src="../img/pizza-carta.jpg" alt="Carta seccion pizza y parrilla">
-      <span class="titulo-carta">Pizza & Parrilla</span>
-    </div>
-    <div class="carta-item">
-      <img src="../img/refresco-carta.jpg" alt="Carta seccion refrescos">
-      <span class="titulo-carta">Refrescos</span>
-    </div>
-    <div class="carta-item">
-      <img src="../img/cerveza-carta.jpg" alt="Carta seccion cervezas y vinos">
-      <span class="titulo-carta">Cervezas & Vinos</span>
-    </div>
-  </div>
+  </section>
 </main>
 
-    <footer>
-        <ul>
-            <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="../img/logo-wp.png"
-                        alt="Logo WhatsApp" class="logo-rs"></a></li>
-            <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="../img/logo-ig.png"
-                        alt="Logo Instagram" class="logo-rs"></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
-                        src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
-        </ul>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+<footer>
+    <ul>
+        <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank" rel="noopener" aria-label="Contáctanos por WhatsApp"><img src="../img/logo-wp.png" alt="Logo WhatsApp" class="logo-rs" width="30" height="30"></a></li>
+        <li><a href="https://www.instagram.com/esquinacantina/" target="_blank" rel="noopener" aria-label="Síguenos en Instagram"><img src="../img/logo-ig.png" alt="Logo Instagram" class="logo-rs" width="30" height="30"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank" rel="noopener" aria-label="Síguenos en Facebook"><img src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs" width="30" height="30"></a></li>
+    </ul>
+</footer>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
