--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Esquina Cantina | Bar y Restaurante en el Prado, Montevideo</title>
+    <meta name="description" content="Esquina Cantina, bar y restaurante en el Prado de Montevideo. Disfruta de chivitos, asados, pizzas y tragos en un ambiente único. Reservas y delivery disponibles.">
+    <meta name="keywords" content="esquina cantina, bar montevideo, restaurante prado, chivitos uruguay, asado montevideo, comida tradicional uruguaya">
+    <link rel="canonical" href="https://www.esquinacantina.com/index.html">
+    <meta property="og:title" content="Esquina Cantina | Bar y Restaurante en Montevideo">
+    <meta property="og:description" content="Bar y restaurante en el Prado con lo mejor de la gastronomía uruguaya. Chivitos, asados, pizzas y excelentes tragos.">
+    <meta property="og:image" content="https://www.esquinacantina.com/img/logo-crema.png">
+    <meta property="og:url" content="https://www.esquinacantina.com">
+    <meta property="og:type" content="website">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Knewave&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
         rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Esquina Cantina</title>
+    <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" aria-label="Navegación principal">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">
-                <img src="./img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
+                <img src="./img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav" width="150" height="50">
               </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Abrir menú de navegación">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
@@ -51,22 +60,23 @@
     </header>
 
     <main id="main-index">
-        <p id="bienvenidos-inicio">¡Bienvenidos!</p>
-        <p id="se-pica-inicio">Se pica la cantina...</p>
+        <section class="hero-section">
+            <h1 id="bienvenidos-inicio">¡Bienvenidos a Esquina Cantina!</h1>
+            <p id="se-pica-inicio">Se pica la cantina...</p>
+        </section>
+
+        
+
     </main>
 
     <footer>
-        <ul>
-            <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="./img/logo-wp.png"
-                        alt="Logo WhatsApp" class="logo-rs"></a></li>
-            <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="./img/logo-ig.png"
-                        alt="Logo Instagram" class="logo-rs"></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
-                        src="./img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
+        <ul class="social-links">
+            <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank" rel="noopener" aria-label="Contáctanos por WhatsApp"><img src="./img/logo-wp.png" alt="Logo WhatsApp" class="logo-rs" width="30" height="30"></a></li>
+            <li><a href="https://www.instagram.com/esquinacantina/" target="_blank" rel="noopener" aria-label="Síguenos en Instagram"><img src="./img/logo-ig.png" alt="Logo Instagram" class="logo-rs" width="30" height="30"></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank" rel="noopener" aria-label="Síguenos en Facebook"><img src="./img/logo-facebook.png" alt="Logo Facebook" class="logo-rs" width="30" height="30"></a></li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
