--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto - Esquina Cantina | Envianos tu mensaje</title>
+  <meta name="description" content="Contacta con Esquina Cantina en Montevideo. Respondemos a tus consultas, reservas o sugerencias a través de nuestro formulario de contacto.">
+  <meta name="keywords" content="contacto esquina cantina, restaurante montevideo, mensaje bar prado, atención al cliente">
+  <link rel="canonical" href="https://www.esquinacantina.com/pages/contacto.html">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-
   <link rel="stylesheet" href="../style/style.css">
-  <title>Nosotros</title>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav" width="150" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -44,44 +46,43 @@
               <a class="nav-link" href="./pedi.html">Pedidos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
+              <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
+  
   <main id="main-contact">
+    <h1 style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0;">Contacto Esquina Cantina</h1>
 
     <p>Hola, esperamos tu mensaje...</p>
-    <form action="#" method="">
-      <label for="nombre"></label>
-      <input type="text" id="nombre" name="nombre" placeholder="Nombre*" required>
+    <form action="#" method="post" aria-label="Formulario de contacto">
+      <label for="nombre" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0;">Nombre</label>
+      <input type="text" id="nombre" name="nombre" placeholder="Nombre*" required aria-required="true">
 
-      <label for="apellido"></label>
-      <input type="text" id="apellido" name="apellido" placeholder="Apellido*" required>
+      <label for="apellido" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0;">Apellido</label>
+      <input type="text" id="apellido" name="apellido" placeholder="Apellido*" required aria-required="true">
 
-      <label for="celular"></label>
-      <input type="tel" id="celular" name="celular" placeholder="Celular*" required>
+      <label for="celular" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0;">Celular</label>
+      <input type="tel" id="celular" name="celular" placeholder="Celular*" required aria-required="true">
 
-      <label for="mensaje"></label>
+      <label for="mensaje" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0;">Mensaje</label>
       <textarea id="mensaje" name="mensaje" placeholder="Escribí tu mensaje..." rows="4"></textarea>
 
       <input type="submit" value="Enviar">
     </form>
   </main>
 
-
   <footer>
     <ul>
-      <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="../img/logo-wp.png"
-            alt="Logo WhatsApp" class="logo-rs"></a></li>
-      <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="../img/logo-ig.png"
-            alt="Logo Instagram" class="logo-rs"></a></li>
-      <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
-            src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
+      <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank" rel="noopener" aria-label="Contacto WhatsApp"><img src="../img/logo-wp.png" alt="Logo WhatsApp" class="logo-rs" width="30" height="30"></a></li>
+      <li><a href="https://www.instagram.com/esquinacantina/" target="_blank" rel="noopener" aria-label="Instagram Esquina Cantina"><img src="../img/logo-ig.png" alt="Logo Instagram" class="logo-rs" width="30" height="30"></a></li>
+      <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank" rel="noopener" aria-label="Facebook Esquina Cantina"><img src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs" width="30" height="30"></a></li>
     </ul>
   </footer>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
