--- a/pages/pedi.html
+++ b/pages/pedi.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pedidos Online - Esquina Cantina | Delivery en Montevideo</title>
+    <meta name="description" content="Hacé tu pedido online en Esquina Cantina. Chivitos, asados, pizzas y más con delivery en Montevideo. Comida tradicional uruguaya a domicilio.">
+    <meta name="keywords" content="pedidos online esquina cantina, delivery montevideo, comida a domicilio, chivito delivery, pizza uruguaya">
+    <link rel="canonical" href="https://www.esquinacantina.com/pages/pedi.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sigmar&display=swap"
         rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Pedidos</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">
-                <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav">
+              <a class="navbar-brand" href="../index.html">
+                <img src="../img/logo-crema.png" alt="Logo de Esquina Cantina" id="logo-nav" width="150" height="50">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,7 +30,7 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./nosotros.html">Nosotros</a>
@@ -40,7 +42,7 @@
                     <a class="nav-link" href="./reservas.html">Reservas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./pedi.html">Pedidos</a>
+                    <a class="nav-link active" aria-current="page" href="./pedi.html">Pedidos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -51,64 +53,65 @@
           </nav>
     </header>
     <main>
+        <h1 style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border: 0;">Pedidos Online Esquina Cantina</h1>
         <div class="div-pedir">
             <div id="comida-1">
                 <section>
                     <p class="titulo">Chivito:</p>
-                    <img src="../img/chivito.jpg" alt="">
+                    <img src="../img/chivito.jpg" alt="Chivito completo uruguayo" width="300" height="200">
                     <p>$650</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de chivitos" min="1">
                     <input type="submit" value="Agregar">
                 </section>
                 <section>
                     <p class="titulo">Lemenyun:</p>
-                    <img src="../img/lemenyun.jpg" alt="">
+                    <img src="../img/lemenyun.jpg" alt="Lemenyun tradicional uruguayo" width="300" height="200">
                     <p>$150</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de lemenyun" min="1">
                     <input type="submit" value="Agregar">
                 </section>
                 <section>
                     <p class="titulo">Gramajo:</p>
-                    <img src="../img/gramajo.jpg" alt="">
+                    <img src="../img/gramajo.jpg" alt="Revuelto gramajo casero" width="300" height="200">
                     <p>$300</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de gramajo" min="1">
                     <input type="submit" value="Agregar">
                 </section>
                 <section>
                     <p class="titulo">Entraña:</p>
-                    <img src="../img/entraña.jpg" alt="">
+                    <img src="../img/entraña.jpg" alt="Entraña a la parrilla" width="300" height="200">
                     <p>$700</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de entraña" min="1">
                     <input type="submit" value="Agregar">
                 </section>
             </div>
             <div id="comida-2">
                 <section>
                     <p class="titulo">Figazza:</p>
-                    <img src="../img/pizza.jpg" alt="">
+                    <img src="../img/pizza.jpg" alt="Pizza figazza casera" width="300" height="200">
                     <p>$250</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de figazza" min="1">
                     <input type="submit" value="Agregar">
                 </section>
                 <section>
                     <p class="titulo">Tira asado:</p>
-                    <img src="../img/tira-asado.jpg" alt="">
+                    <img src="../img/tira-asado.jpg" alt="Tira de asado a la parrilla" width="300" height="200">
                     <p>$650</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de tira de asado" min="1">
                     <input type="submit" value="Agregar">
                 </section>
                 <section>
                     <p class="titulo">Chescake:</p>
-                    <img src="../img/chescake.jpg" alt="">
+                    <img src="../img/chescake.jpg" alt="Cheesecake casero con frutos rojos" width="300" height="200">
                     <p>$350</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de cheesecake" min="1">
                     <input type="submit" value="Agregar">
                 </section>
                 <section>
                     <p class="titulo">Muzzarella:</p>
-                    <img src="../img/muzza.jpg" alt="">
+                    <img src="../img/muzza.jpg" alt="Pizza muzzarella a la piedra" width="300" height="200">
                     <p>$250</p>
-                    <input type="number" placeholder="Cantidad *">
+                    <input type="number" placeholder="Cantidad *" aria-label="Cantidad de pizza muzzarella" min="1">
                     <input type="submit" value="Agregar">
                 </section>
             </div>
@@ -116,16 +119,12 @@
     </main>
     <footer>
         <ul>
-            <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank"><img src="../img/logo-wp.png"
-                        alt="Logo WhatsApp" class="logo-rs"></a></li>
-            <li><a href="https://www.instagram.com/esquinacantina/" target="_blank"><img src="../img/logo-ig.png"
-                        alt="Logo Instagram" class="logo-rs"></a></li>
-            <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank"><img
-                        src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs"></a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=59892380930" target="_blank" rel="noopener" aria-label="Contacto WhatsApp"><img src="../img/logo-wp.png" alt="Logo WhatsApp" class="logo-rs" width="30" height="30"></a></li>
+            <li><a href="https://www.instagram.com/esquinacantina/" target="_blank" rel="noopener" aria-label="Instagram Esquina Cantina"><img src="../img/logo-ig.png" alt="Logo Instagram" class="logo-rs" width="30" height="30"></a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=61571146630866" target="_blank" rel="noopener" aria-label="Facebook Esquina Cantina"><img src="../img/logo-facebook.png" alt="Logo Facebook" class="logo-rs" width="30" height="30"></a></li>
         </ul>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 
 </html>
